--- a/css/header.css
+++ b/css/header.css
@@ -15,6 +15,19 @@
     height: 500px;
   }
 
+  #TopImg::before{
+    /* 透過した黒を上から重ねるイメージ */
+  background-color: rgba(0,0,0,0.3);
+  /* 自由に位置指定 */
+  position: absolute;
+  top: 110px;
+  right: 0;
+  bottom: 365px;
+  left: 0;
+  content: ' ';
+  z-index: 0;
+  }
+
   .head {
     display: flex;
     flex-direction: row;
@@ -73,6 +86,19 @@
     background-repeat: no-repeat;
     width: 100%;
     height: 300px;
+  }
+  #TopImg::before{
+    /* 透過した黒を上から重ねるイメージ */
+  background-color: rgba(0,0,0,0.3);
+  height: 300px;
+  /* 自由に位定 */
+  position: absolute;
+  top: 70px;
+  right: 0;
+
+  left: 0;
+  content: ' ';
+  z-index: 0;
   }
 
   header{
